--- a/.vitepress/theme/theme-overrides.css
+++ b/.vitepress/theme/theme-overrides.css
@@ -67,22 +67,29 @@
   min-height: calc(100vh - 78px) !important;
 }
 
-.VPDoc .vp-doc a {
-  margin: 0 calc(var(--inline-gap) / 2);
+.VPDoc .content-container {
+  text-autospace: normal;
 }
 
 .VPDoc .vp-doc p {
   margin: var(--block-margin) 0;
 }
 
-.VPDoc .vp-doc p.describe {
-  margin: 12px 0;
-}
-
 .VPDoc .vp-doc p em {
   font-style: normal;
   font-weight: bold;
 }
+
+.VPDoc .vp-doc p a {
+  border-bottom: 1px solid var(--vp-c-brand-1);
+  color: var(--vp-c-text-1);
+  text-decoration: none;
+}
+
+.VPDoc .vp-doc p a:hover {
+  color: var(--vp-c-brand-1);
+}
+
 .title {
   color: var(--vp-c-text-1);
   font-weight: 600 !important;
@@ -92,14 +99,13 @@
 }
 
 .VPDoc h1 {
-  margin-top: calc(var(--block-margin) * 2) !important;
+  margin: var(--block-margin) 0 calc(var(--block-margin) * 2) !important;
   font-weight: 500 !important;
   font-size: 2rem !important;
 }
 
 .VPDoc h2 {
-  margin-top: calc(var(--block-margin) * 2) !important;
-  margin-bottom: 0 !important;
+  margin: calc(var(--block-margin) * 2) 0 !important;
   padding-top: 0 !important;
   border-top: none !important;
   font-weight: 500 !important;
@@ -107,7 +113,7 @@
 }
 
 .VPDoc h3 {
-  margin-top: calc(var(--block-margin) * 2) !important;
+  margin: calc(var(--block-margin) * 2) 0 !important;
 }
 
 .VPDoc h1 .header-anchor,
@@ -177,6 +183,12 @@
   .VPDoc h1 {
     font-size: 1.25rem !important;
   }
+  .VPDoc h2 {
+    font-size: 1.125rem !important;
+  }
+  .VPDoc h3 {
+    font-size: 1rem !important;
+  }
 }
 
 /* for aside end */
@@ -187,7 +199,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  margin-bottom: 8px;
+  margin: calc(var(--block-margin) / 2) 0;
   gap: var(--inline-gap);
   line-height: 1;
 }
